Name:                buffy
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Flag old-base
  default: False
  manual: False

Executable buffy
  hs-source-dirs: src
  main-is: Main.hs

  extensions: DeriveDataTypeable OverloadedStrings TemplateHaskell
  Build-depends:
    adjunctions,
    aeson,
    attoparsec,
    blaze-builder,
    blaze-html,
    bytestring,
    connection,
    containers,
    either,
    heist,
    http-client-tls,
    http-types,
    lens-aeson,
    MonadCatchIO-transformers,
    mtl,
    random,
    safe,
    snap ,
    snap-core,
    snap-server,
    snap-loader-static,
    text,
    transformers,
    time,
    vector,
    wreq,
    xmlhtml

  if flag(old-base)
    build-depends:
      base                      >= 4        && < 4.4,
      lens
  else
    build-depends:
      base                      >= 4.4      && < 5,
      lens

  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.10.*
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans
